# rust-game

./: Cargo.toml  package.json  webpack.config.js
src/: canvas.rs  lib.rs  main.rs  snake.rs
static/: index.html  index.js
