[package]
name = "bret-victors-engine"
version = "0.1.0"
authors = ["Ty <ty@tytr.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
# default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.67"
num = "0.3.0"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Node',
  'Window',
]